--- a/style.css
+++ b/style.css
@@ -1,67 +1,56 @@
-body{
+/*footer css*/
+.footer{
     background-color: black;
+    width: 92.5vw;
     color: aliceblue;
+    margin: 0 auto;
+    padding: 50px 0;
+    box-sizing: border-box;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
     font-family: 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
-
-a{
+.footer a{
     text-decoration: none;
     color: #5d7fb9;
     margin-right: 18px;
-    font-size: 12px;
+    font-size: 12.6px;
 }
 
 
-.allfooter{
-    width: 92.5vw;
-    margin: 0 auto;
-    box-sizing: border-box;
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: 0;
-  }
-
+.footer ul>li{
+    list-style-type: none;
+    display: inline-block;
+    font-weight: bold;
+}
 
 .footer-info img{
-    width: 86px;
-    display: inline-block;
-}
-
-
-#footer-links li{
-    font-weight: bolder;
-    margin-left:7px  ;
-    display:inline-block;
-    list-style-type:none;
-
-
-}
-
-
-
-.footer{
-    width: 100%;
-    background: rgb(0, 0, 0);
+width: 84px;
+display: inline-block;
+float: left;
 }
 
 .footer-info span{
-    font-size: 16.5px;
+    display: inline-block;
+    text-align: center;
+    font-size: 15px;
 }
 
-.footer a{
-    align-self: :center;;
+.footer-info{
+vertical-align: middle;
 }
 
+#footer-links{
+    margin: 20px 0;
+    padding-left: 0;
+    position: absolute;
+    right: 0;
+    margin-right: 42px;
+}
+
+/*payane footer css*/
 
 
-
-
-
-
-
-
-
-
-    
