--- a/style.css
+++ b/style.css
@@ -1,58 +1,3 @@
-<<<<<<< HEAD
-/* start footer css*/
-.footer{
-    background-color: black;
-    width:1400px;
-    color: aliceblue;
-    margin: 0 auto;
-    padding: 50px 0;
-    box-sizing: border-box;
-    position: absolute;
-     /*baraye vasat chin kardsne container footer 
-    lazem shod ke az 3 code: bottom , left va right ke meghdare
-    anha 0 boud estefade konam */
-    bottom: 0;
-    right: 0;
-    left: 0;
-    font-family: 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-}
-
-.footer a{
-    text-decoration: none;
-    color: #5d7fb9;
-    margin-right: 18px;
-    font-size: 12.6px;
-}
-
-
-.footer ul>li{
-    list-style-type: none;
-    display: inline-block;
-    font-weight: bold;
-}
-
-.footer-info img{
-width: 82px;
-display: inline-block;
-float: left;/*dadane float:left be img baes shod span hae ke dar 1 div ba img 
-bodan roye 1 khate moshtarak gharar begiran  */
-}
-
-.footer-info span{
-    display: inline-block;
-    font-size: 14px;
-}
-
-
-#footer-links{
-    padding-left: 0;
-    text-align: right;
-}
-
-/*payane footer css*/
-
-
-=======
 @font-face {
   font-family: nasafont;
   src: url(./Titillium_Web/TitilliumWeb-Regular.ttf);
@@ -84,17 +29,18 @@ body {
   /* background-color: #cccccc; */
   background-repeat: no-repeat;
   background-position: center;
-  padding: 256px;
+  padding: 263px;
   width: 113px;
   position: relative;
   cursor: pointer;
   display: inline-block;
+  height: 110px;
 }
-.main-top-left a {
+.main-top-left h1 {
   display: inline;
   position: absolute;
   left: 0;
-  bottom: 0;
+  bottom:-10px;
   background: rgba(255, 255, 255, 0.8);
   width: 100%;
   text-decoration: none;
@@ -120,11 +66,11 @@ body {
   position: relative;
   display: inline-block;
 }
-.main-top-right-up a {
+.main-top-right-up h1 {
   display: inline;
   position: absolute;
   left: 0;
-  bottom: 0;
+  bottom:-10px;
   background: rgba(255, 255, 255, 0.8);
   width: 91%;
   text-decoration: none;
@@ -184,11 +130,11 @@ body {
   width: 376px;
   position: relative;
 }
-.main-top-right-down a {
+.main-top-right-down h1{
   display: inline;
   position: absolute;
   left: 0;
-  bottom: 0;
+  bottom:-10px;
   background: rgba(255, 255, 255, 0.8);
   width: 97%;
   text-decoration: none;
@@ -198,6 +144,9 @@ body {
   font-size: 19px;
   line-height: 23px;
   text-align: left;
+}
+.main-middel{
+  width: 1399px;
 }
 .main-middel-first {
   background-image: url(image/axiom_axemu_full.jpg);
@@ -210,11 +159,11 @@ body {
   position: relative;
   display: inline-block;
 }
-.main-middel-first a {
+.main-middel-first h1 {
   display: inline;
   position: absolute;
   left: 0;
-  bottom: 0;
+  bottom:-10px;
   background: rgba(255, 255, 255, 0.8);
   width: 94%;
   text-decoration: none;
@@ -237,11 +186,11 @@ body {
   display: inline-block;
   height: 69px;
 }
-.main-middel-second a {
+.main-middel-second h1{
   display: inline;
   position: absolute;
   left: 0;
-  bottom: 0;
+  bottom:-10px;
   background: rgba(255, 255, 255, 0.8);
   width: 97%;
   text-decoration: none;
@@ -263,11 +212,11 @@ body {
   position: relative;
   display: inline-block;
 }
-.main-middel-third a {
+.main-middel-third h1 {
   display: inline;
   position: absolute;
   left: 0;
-  bottom: 0;
+  bottom:-10px;
   background: rgba(255, 255, 255, 0.8);
   width: 94%;
   text-decoration: none;
@@ -278,6 +227,9 @@ body {
   line-height: 23px;
   text-align: left;
 }
+.main-bottom{
+ width: 1418px;}
+
 .main-bottom-first {
   background-image: url(image/_bc22186_.jpg);
   background-size: 100%;
@@ -289,11 +241,11 @@ body {
   position: relative;
   display: inline-block;
 }
-.main-bottom-first a {
+.main-bottom-first h1 {
   display: inline;
   position: absolute;
   left: 0;
-  bottom: 0;
+  bottom: -10px;
   background: rgba(255, 255, 255, 0.8);
   width: 94%;
   text-decoration: none;
@@ -315,11 +267,11 @@ body {
   position: relative;
   display: inline-block;
 }
-.main-bottom-second a {
+.main-bottom-second h1 {
   display: inline;
   position: absolute;
   left: 0;
-  bottom: 0;
+  bottom:-10px;
   background: rgba(255, 255, 255, 0.8);
   width: 94%;
   text-decoration: none;
@@ -341,11 +293,11 @@ body {
   position: relative;
   display: inline-block;
 }
-.main-bottom-third a {
+.main-bottom-third h1 {
   display: inline;
   position: absolute;
   left: 0;
-  bottom: 0;
+  bottom: -10px;
   background: rgba(255, 255, 255, 0.8);
   width: 94%;
   text-decoration: none;
@@ -367,11 +319,11 @@ body {
   position: relative;
   display: inline-block;
 }
-.main-bottom-Fourth a {
+.main-bottom-Fourth h1 {
   display: inline;
   position: absolute;
   left: 0;
-  bottom: 0;
+  bottom: -10px;
   background: rgba(255, 255, 255, 0.8);
   width: 94%;
   text-decoration: none;
@@ -389,7 +341,7 @@ body {
   cursor: pointer;
   padding: 8px;
   margin-top: 15px;
-  width: 1331px;
+  width: 1386px;
   
 }
 .MORE-STORIES button {
@@ -451,4 +403,3 @@ a {
   text-align: right;
   width: 1336px;
 }
->>>>>>> 162493e56574d6783d53419308602c3d180ebb0b
