--- a/style.css
+++ b/style.css
@@ -398,7 +398,7 @@ background: rgb(255, 254, 254);
   background: #15418c;
   text-align: center;
   cursor: pointer;
-  padding: 8px;
+  
   margin-top: 15px;
   width: 1386px;
   
@@ -415,6 +415,7 @@ background: rgb(255, 254, 254);
   font-weight: 600;
   border: none;
   width: 100%;
+  height: 45px;
 }
 .MORE-STORIES button:hover{
   background: #5d7fb9;
