--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@
   font-family: nasafont;
   src: url(./Titillium_Web/TitilliumWeb-Regular.ttf);
 }
-
 body {
   font-family: nasafont;
   background-color: black;
@@ -20,30 +19,41 @@ body {
 .main {
   /* text-align: center; */
   margin: 0 auto;
+  margin-top: 144px;
 }
-
 .main-top {
   display: inline-flex;
 }
-
 .main-top-left {
   background: url(image/state-of-nasa-2023.png);
   background-size: 100%;
   /* background-color: #cccccc; */
   background-repeat: no-repeat;
   background-position: center;
-  padding: 256px;
+  padding: 263px;
   width: 113px;
   position: relative;
   cursor: pointer;
   display: inline-block;
+  height: 110px;
 }
-
-.main-top-left a {
+.main-top-left h2{
+  background: rgba(87, 108, 214, 0.6);
+  position: absolute;
+  left: 0;
+  bottom: 44px;
+  color: white;
+  font-size: 18px;
+  padding: 6px 12px;
+}
+.main-top-left h2:hover{
+background: rgb(94, 109, 189)
+}
+.main-top-left h1 {
   display: inline;
   position: absolute;
   left: 0;
-  bottom: 0;
+  bottom:-10px;
   background: rgba(255, 255, 255, 0.8);
   width: 100%;
   text-decoration: none;
@@ -54,12 +64,14 @@ body {
   line-height: 23px;
   text-align: left;
 }
+.main-top-left h1:hover{
+  background: rgb(255, 254, 254);
+}
 
 .main-top-right {
   display: inline-block;
   padding-left: 9px;
 }
-
 .main-top-right-up {
   background: url(image/artemis_ii_graphics.jpg);
   background-size: 100%;
@@ -72,11 +84,11 @@ body {
   display: inline-block;
 }
 
-.main-top-right-up a {
+.main-top-right-up h1 {
   display: inline;
   position: absolute;
   left: 0;
-  bottom: 0;
+  bottom:-13px;
   background: rgba(255, 255, 255, 0.8);
   width: 91%;
   text-decoration: none;
@@ -86,6 +98,10 @@ body {
   font-size: 19px;
   line-height: 23px;
   text-align: left;
+}
+.main-top-right-up h1:hover{
+  background: rgb(255, 254, 254);
+  
 }
 
 .nasa-event {
@@ -103,35 +119,30 @@ body {
   position: absolute;
   margin-left: 4px;
 }
-
 .nasa-event * {
   color: white;
   text-decoration: none;
   font-size: 14px;
+
   position: relative;
 }
-
 .nasa-event-line-first {
   border: 1px solid white;
   padding: 44px;
   padding: 0px 116px;
 }
-
 .event-bottom {
   position: relative;
   top: 78px;
 }
-
 .event-bottom a {
   padding: 7px;
 }
-
 .nasa-event-line-second {
   border: 1px solid white;
   position: relative;
   top: 75px;
 }
-
 .main-top-right-down {
   background: url(image/1-pia00106-maat-mons-1041.jpg);
   background-size: cover;
@@ -142,12 +153,11 @@ body {
   width: 376px;
   position: relative;
 }
-
-.main-top-right-down a {
+.main-top-right-down h1{
   display: inline;
   position: absolute;
   left: 0;
-  bottom: 0;
+  bottom:-13px;
   background: rgba(255, 255, 255, 0.8);
   width: 97%;
   text-decoration: none;
@@ -158,7 +168,12 @@ body {
   line-height: 23px;
   text-align: left;
 }
-
+.main-top-right-down h1:hover{
+  background: rgb(255, 254, 254);
+}
+.main-middel{
+  width: 1399px;
+}
 .main-middel-first {
   background-image: url(image/axiom_axemu_full.jpg);
   background-size: 100%;
@@ -170,12 +185,24 @@ body {
   position: relative;
   display: inline-block;
 }
-
-.main-middel-first a {
+.main-middel-first h2{
+  background: rgba(87, 108, 214, 0.6);
+    position: absolute;
+    left: 0;
+    bottom: 40px;
+    color: white;
+    font-size: 18px;
+    padding: 6px 12px;
+    
+}
+.main-middel-first h2:hover{
+  background: rgb(94, 109, 189)
+}
+.main-middel-first h1 {
   display: inline;
   position: absolute;
   left: 0;
-  bottom: 0;
+  bottom:-13px;
   background: rgba(255, 255, 255, 0.8);
   width: 94%;
   text-decoration: none;
@@ -186,7 +213,9 @@ body {
   line-height: 23px;
   text-align: left;
 }
-
+.main-middel-first h1:hover{
+background: rgb(255, 254, 254);
+}
 .main-middel-second {
   background-image: url(image/waterextremes.00899_print.jpg);
   background-size: 100%;
@@ -199,12 +228,11 @@ body {
   display: inline-block;
   height: 69px;
 }
-
-.main-middel-second a {
+.main-middel-second h1{
   display: inline;
   position: absolute;
   left: 0;
-  bottom: 0;
+  bottom:-13px;
   background: rgba(255, 255, 255, 0.8);
   width: 97%;
   text-decoration: none;
@@ -215,7 +243,9 @@ body {
   line-height: 23px;
   text-align: left;
 }
-
+.main-middel-second h1:hover{
+  background: rgb(255, 254, 254);
+}
 .main-middel-third {
   background-image: url(image/axiom_space.jpg);
   background-size: 100%;
@@ -227,12 +257,11 @@ body {
   position: relative;
   display: inline-block;
 }
-
-.main-middel-third a {
+.main-middel-third h1 {
   display: inline;
   position: absolute;
   left: 0;
-  bottom: 0;
+  bottom:-13px;
   background: rgba(255, 255, 255, 0.8);
   width: 94%;
   text-decoration: none;
@@ -243,6 +272,11 @@ body {
   line-height: 23px;
   text-align: left;
 }
+.main-middel-third h1:hover{
+  background: rgb(255, 254, 254);
+}
+.main-bottom{
+ width: 1418px;}
 
 .main-bottom-first {
   background-image: url(image/_bc22186_.jpg);
@@ -255,12 +289,11 @@ body {
   position: relative;
   display: inline-block;
 }
-
-.main-bottom-first a {
+.main-bottom-first h1 {
   display: inline;
   position: absolute;
   left: 0;
-  bottom: 0;
+  bottom: -13px;
   background: rgba(255, 255, 255, 0.8);
   width: 94%;
   text-decoration: none;
@@ -271,7 +304,9 @@ body {
   line-height: 23px;
   text-align: left;
 }
-
+.main-bottom-first h1:hover{
+  background: rgb(255, 254, 254);
+}
 .main-bottom-second {
   background-image: url(image/52747713048_4c9c64debb_o.jpg);
   background-size: 100%;
@@ -283,12 +318,11 @@ body {
   position: relative;
   display: inline-block;
 }
-
-.main-bottom-second a {
+.main-bottom-second h1 {
   display: inline;
   position: absolute;
   left: 0;
-  bottom: 0;
+  bottom:-13px;
   background: rgba(255, 255, 255, 0.8);
   width: 94%;
   text-decoration: none;
@@ -299,7 +333,9 @@ body {
   line-height: 23px;
   text-align: left;
 }
-
+.main-bottom-second h1:hover{
+  background: rgb(255, 254, 254);
+}
 .main-bottom-third {
   background-image: url(image/52750115253_aeeedffb20_o.jpeg);
   background-size: 100%;
@@ -311,12 +347,11 @@ body {
   position: relative;
   display: inline-block;
 }
-
-.main-bottom-third a {
+.main-bottom-third h1 {
   display: inline;
   position: absolute;
   left: 0;
-  bottom: 0;
+  bottom: -13px;
   background: rgba(255, 255, 255, 0.8);
   width: 94%;
   text-decoration: none;
@@ -327,7 +362,9 @@ body {
   line-height: 23px;
   text-align: left;
 }
-
+.main-bottom-third h1:hover{
+  background: rgb(255, 254, 254);
+}
 .main-bottom-Fourth {
   background-image: url(image/viper_chassis_3_quick_edit.png);
   background-size: 100%;
@@ -339,12 +376,11 @@ body {
   position: relative;
   display: inline-block;
 }
-
-.main-bottom-Fourth a {
+.main-bottom-Fourth h1 {
   display: inline;
   position: absolute;
   left: 0;
-  bottom: 0;
+  bottom: -13px;
   background: rgba(255, 255, 255, 0.8);
   width: 94%;
   text-decoration: none;
@@ -355,15 +391,20 @@ body {
   line-height: 23px;
   text-align: left;
 }
-
+.main-bottom-Fourth h1:hover{
+  background: rgb(255, 254, 254);
+}
 .MORE-STORIES {
   background: #15418c;
   text-align: center;
   cursor: pointer;
   padding: 8px;
   margin-top: 15px;
-  width: 1331px;
+  width: 1386px;
   
+}
+.MORE-STORIES:hover{
+  background: #5d7fb9;
 }
 .MORE-STORIES button {
   background: #15418c;
@@ -373,69 +414,186 @@ body {
   cursor: pointer;
   font-weight: 600;
   border: none;
+  width: 100%;
 }
-
-/* start footer css*/
-a {
-  text-decoration: none;
-  color: #5d7fb9;
-  margin-right: 18px;
-  font-size: 12.6px;
+.MORE-STORIES button:hover{
+  background: #5d7fb9;
 }
-
 .allfooter {
-  width: 1400px;
+  width: 92.5vw;
   margin: 0 auto;
   box-sizing: border-box;
-  left: 0; 
-  right: 0;
-  bottom: 0;
+  /* position: absolute; */
+  /* left: 0; */
+  /* right: 0; */
+  /* bottom: 0; */
   display: inline;
 }
-
 .footer-info{
-  display: inline-block
+    display: inline-block
 }
-
 .footer-info img {
-  width: 79px;
+  width: 86px;
   display: inline-block;
-  margin-top: 7px;
 }
-
 #footer-links li {
   font-weight: bolder;
   margin-left: 7px;
   display: inline-block;
   list-style-type: none;
 }
-
 .footer {
   width: 100%;
   background: rgb(0, 0, 0);
-  margin: 25px 0;
 }
-
 .footer-info span {
-  font-size: 12.9px;
-  font-weight: bold;
+  font-size: 16.5px;
 }
-
 .footer a {
-  align-self: center;
+  color:#5d7fb9 ;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 15px;
 }
-
 .National {
   display: inline-block;
 }
-
 .bottom-logo {
-  float: left;
+  display: inline-block;
 }
-
 #footer-links {
   text-align: right;
   width: 1336px;
-  padding-left: 0;
 }
-/*payane footer css*/
+#footer-links a{
+  text-decoration: none;
+}
+
+#footer-links a:hover{
+  text-decoration: underline;}
+
+/* Css properties code container[START] */
+.container {
+  margin: 0 auto;
+  background-color: rgb(34, 34, 34, 0.7);
+  width: 1200px;
+}
+/* Css properties code container[END] */
+
+/* Css properties code header[START] */
+.header {
+  width: 1376px;
+    position: fixed;
+    z-index: 2;
+    background-image: url(image/preview.jpg);
+    top: 0;
+}
+/* Css properties code header[END] */
+
+/* Css properties codes header menu[START] */
+.menu {
+  display: inline-block;
+  vertical-align: top;
+  text-align: center;
+  /* width: 1376px; */
+    position: fixed;
+    z-index: 2;
+    /* background-image: url(image/preview.jpg); */
+    margin-top: -8px;
+}
+/* Css properties codes header menu[END] */
+
+/* Css properties code header logo-nasa[START] */
+.logo-nasa {
+  display: inline;
+}
+/* Css properties code header logo-nasa[END] */
+
+/*  Css properties codes header links-menu top[START] */
+.links-menu {
+  position: relative;
+}
+
+.links-menu > ul > li {
+  list-style-type: none;
+  display: inline-block;
+  padding: 0px;
+  font-size: 20px;
+  border-right: 1px solid black;
+  position: relative;
+}
+
+.links-menu ul > li > a {
+  color: white;
+  text-decoration: none;
+  margin-right: 5px;
+}
+/* Css properties links-menu ul :Missions [START]*/
+.links-menu ul li ul {
+  display: none;
+  position: absolute;
+  background-color: blue;
+  padding: 0px;
+  width: 250px;
+}
+
+.links-menu ul li:hover ul {
+  display: block;
+}
+
+.links-menu ul li ul > li {
+  list-style-type: none;
+  display: block;
+  text-align: left;
+  margin-bottom: 10px;
+}
+
+/* Css properties links-menu ul :Missions [END]*/
+
+/* css properties menu search-box top[START] */
+.search-box {
+  border: 2px solid gray;
+  display: inline;
+  position: absolute;
+  right: 0px;
+  top: 0px;
+  background-color: rgb(161, 161, 161);
+}
+
+.search-box svg {
+  width: 19px;
+  vertical-align: middle;
+  fill: white;
+}
+
+.search-box input {
+  width: 100px;
+  padding: 8px;
+  outline: none;
+  border: none;
+  background-color: rgb(161, 161, 161);
+}
+/* css properties menu search-box top[END] */
+
+/*  Css properties codes header links-menu top[End] */
+
+/*  Css properties codes header links-down[START] */
+.links-down ul {
+  background-color: gray;
+}
+
+.links-down ul > li {
+  list-style-type: none;
+  padding: 0px;
+  display: inline-block;
+  border: 2px solid gray;
+  font-size: 15px;
+}
+
+.links-down ul > li > a {
+  color: white;
+  text-decoration: none;
+  box-sizing: border-box;
+  margin: 0px 5px 0px 5px;
+}
+/*  Css properties codes header links-down[End] */
