--- a/index style.css
+++ b/index style.css
@@ -54,16 +54,16 @@
       .links-menu {
         position: relative;
       }
-
+      
       .links-menu > ul > li {
         list-style-type: none;
         display: inline-block;
         padding: 0px;
         font-size: 20px;
-        border-right: 1px solid black;
+        border-right: 2px solid gray;
         position: relative;
       }
-
+      
       .links-menu ul > li > a {
         color: white;
         text-decoration: none;
@@ -75,44 +75,61 @@
         position: absolute;
         background-color: blue;
         padding: 0px;
-        width: 250px;
+        width: 290px;
       }
-
+      
       .links-menu ul li:hover ul {
         display: block;
       }
-
+      
+      .links-menu ul li:hover a {
+        background-color: blue;
+      }
+      
+      
       .links-menu ul li ul > li {
         list-style-type: none;
         display: block;
         text-align: left;
-        margin-bottom: 10px;
+        margin-top: 12px;
       }
-
+      
+      .links-menu ul li ul  li:hover a{
+        background-color: #0088f8;
+      } 
+      
       /* Css properties links-menu ul :Missions [END]*/
-
+      
       /* css properties menu search-box top[START] */
       .search-box {
-        border: 2px solid gray;
+        border: 2px solid #333333;
         display: inline;
         position: absolute;
-        right: 0px;
+        right: -86px;
         top: 0px;
-        background-color: rgb(161, 161, 161);
+        background-color:#333333;
       }
-
+      
       .search-box svg {
         width: 19px;
         vertical-align: middle;
         fill: white;
       }
-
+      
       .search-box input {
         width: 100px;
         padding: 8px;
         outline: none;
         border: none;
-        background-color: rgb(161, 161, 161);
+        background-color:#333333;
+        cursor: text;
+      }
+      
+      .search-box img{
+        width: 19px;
+        position: absolute;
+        right: -35px;
+        top: 5px;
       }
       /* css properties menu search-box top[END] */
 
