--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
 .main {
   /* text-align: center; */
   margin: 0 auto;
-  margin-top: 144px;
+  margin-top: 103px;
 }
 .main-top {
   display: inline-flex;
@@ -458,15 +458,20 @@ background: rgb(255, 254, 254);
   font-weight: bold;
   font-size: 13.5px;
 }
+
 .National {
   display: inline-block;
+  vertical-align:top;
 }
+
 .bottom-logo {
   display: inline-block;
 }
 #footer-links {
   text-align: right;
   width: 1336px;
+  margin: 0px;
+  padding: 0px;
 }
 #footer-links a{
   text-decoration: none;
@@ -523,7 +528,7 @@ background: rgb(255, 254, 254);
   display: inline-block;
   padding: 0px;
   font-size: 20px;
-  border-right: 1px solid black;
+  border-right: 2px solid gray;
   position: relative;
 }
 
@@ -538,30 +543,39 @@ background: rgb(255, 254, 254);
   position: absolute;
   background-color: blue;
   padding: 0px;
-  width: 250px;
+  width: 290px;
 }
 
 .links-menu ul li:hover ul {
   display: block;
 }
 
+.links-menu ul li:hover a {
+  background-color: blue;
+}
+
+
 .links-menu ul li ul > li {
   list-style-type: none;
   display: block;
   text-align: left;
-  margin-bottom: 10px;
+  margin-top: 12px;
 }
+
+.links-menu ul li ul  li:hover a{
+  background-color: #0088f8;
+} 
 
 /* Css properties links-menu ul :Missions [END]*/
 
 /* css properties menu search-box top[START] */
 .search-box {
-  border: 2px solid gray;
+  border: 2px solid #333333;
   display: inline;
   position: absolute;
-  right: 0px;
+  right: -86px;
   top: 0px;
-  background-color: rgb(161, 161, 161);
+  background-color:#333333;
 }
 
 .search-box svg {
@@ -575,23 +589,39 @@ background: rgb(255, 254, 254);
   padding: 8px;
   outline: none;
   border: none;
-  background-color: rgb(161, 161, 161);
+  background-color:#333333;
+  cursor: text;
 }
+
+.search-box img{
+  width: 19px;
+  position: absolute;
+  right: -35px;
+  top: 5px;
+}
+
 /* css properties menu search-box top[END] */
 
 /*  Css properties codes header links-menu top[End] */
 
 /*  Css properties codes header links-down[START] */
+.links-down{
+  font-size: 1px;
+}
+
 .links-down ul {
-  background-color: gray;
+  display: inline-block;
+  padding: 5px 5px 5px 5px;
+  background-color: rgb(75, 75, 75);
 }
 
 .links-down ul > li {
   list-style-type: none;
   padding: 0px;
   display: inline-block;
-  border: 2px solid gray;
+  /* border: 2px solid gray; */
   font-size: 15px;
+  border-right: 1px solid gray;
 }
 
 .links-down ul > li > a {
@@ -599,5 +629,10 @@ background: rgb(255, 254, 254);
   text-decoration: none;
   box-sizing: border-box;
   margin: 0px 5px 0px 5px;
+}
+
+.links-down ul  li:hover a{
+  background-color: rgb(97, 97, 97);
+  
 }
 /*  Css properties codes header links-down[End] */
