fixed header borders

--- a/style.css
+++ b/style.css
@@ -136,13 +136,13 @@ border-right: none;
   top: 5px;
 }
 
-.menu .menu-ForeStudents{
+.menu .border-menu-ForeStudents{
   border-bottom: 1px solid white; 
   margin: 0;
   margin-top: 13px;
 }
 
-.menu .menu-Quesst{
+.menu .border-menu-Quesst{
   border-bottom: 1px solid white;
   margin: 0;
   margin-top: 13px;
